DEV Link Page überarbeitet

--- a/dev.html
+++ b/dev.html
@@ -154,16 +154,16 @@
                     <p>
                         <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App STAGING">
                         <strong>iOS</strong><br>
-                        <a href="https://storgaappstag002.blob.core.windows.net/downloads/default-stag/orga-app.install.html" target="_blank">
-                            https://storgaappstag002.blob.core.windows.net/downloads/default-stag/orga-app.install.html
+                        <a href="https://storgaappstag002.blob.core.windows.net/downloads/default-staging/orga-app.install.html" target="_blank">
+                            https://storgaappstag002.blob.core.windows.net/downloads/default-staging/orga-app.install.html
                         </a>
                     </p>
 
                     <p>
                         <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App STAGING">
                         <strong>Android</strong><br>
-                        <a href="https://storgaappstag002.blob.core.windows.net/downloads/default-stag/orga-app.apk" target="_blank">
-                            https://storgaappstag002.blob.core.windows.net/downloads/default-stag/orga-app.apk
+                        <a href="https://storgaappstag002.blob.core.windows.net/downloads/default-staging/orga-app.apk" target="_blank">
+                            https://storgaappstag002.blob.core.windows.net/downloads/default-staging/orga-app.apk
                         </a>
                     </p>
 
@@ -210,6 +210,48 @@
                     </p>
 
                 </div>  <!--blog-item section end-->
+
+                <div class="blog-item-sec">
+
+                    <h3 style="margin: 0 0 30px 0;">PREMIUM</h3>
+
+                    <h5>SoPi</h5>
+                    <p>
+                        <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App DEV">
+                        <strong>iOS</strong><br>
+                        <a href="https://storgaappprod002.blob.core.windows.net/downloads/sopi-prod/orga-app.install.html" target="_blank">
+                            https://storgaappprod002.blob.core.windows.net/downloads/sopi-prod/orga-app.install.html
+                        </a>
+                    </p>
+
+                    <p>
+                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App DEV">
+                        <strong>Android</strong><br>
+                        <a href="https://storgaappprod002.blob.core.windows.net/downloads/sopi-prod/orga-app.apk" target="_blank">
+                            https://storgaappprod002.blob.core.windows.net/downloads/sopi-prod/orga-app.apk
+                        </a>
+                    </p>
+
+                    <p>&nbsp;</p>
+
+                    <h5>TSG</h5>
+                    <p>
+                        <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App DEV">
+                        <strong>iOS</strong><br>
+                        <a href="https://storgaappprod002.blob.core.windows.net/downloads/tsg-prod/orga-app.install.html" target="_blank">
+                            https://storgaappprod002.blob.core.windows.net/downloads/tsg-prod/orga-app.install.html
+                        </a>
+                    </p>
+
+                    <p>
+                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App DEV">
+                        <strong>Android</strong><br>
+                        <a href="https://storgaappprod002.blob.core.windows.net/downloads/tsg-prod/orga-app.apk" target="_blank">
+                            https://storgaappprod002.blob.core.windows.net/downloads/tsg-prod/orga-app.apk
+                        </a>
+                    </p>
+
+                </div> <!--blog-item section end-->
 
             </div><!--blog left content end-->
 
