Client und API URL Anpassungen

--- a/dev.html
+++ b/dev.html
@@ -132,15 +132,15 @@
 
                     <h5 style="margin-top: 20px;">Desktop Client</h5>
                     <p>
-                        <a href="https://orga-app-client-dev.azurewebsites.net/" target="_blank">
-                            https://orga-app-client-dev.azurewebsites.net/
+                        <a href="https://client-dev.orga-app.de/" target="_blank">
+                            https://client-dev.orga-app.de/
                         </a>
                     </p>
 
                     <h5 style="margin-top: 20px;">API URL</h5>
                     <p>
-                        <a href="https://orga-app-api-dev.azurewebsites.net/" target="_blank">
-                            https://orga-app-api-dev.azurewebsites.net
+                        <a href="https://api-dev.orga-app.de/" target="_blank">
+                            https://api-dev.orga-app.de/
                         </a>
                     </p>
 
@@ -169,15 +169,15 @@
 
                     <h5 style="margin-top: 20px;">Desktop Client</h5>
                     <p>
-                        <a href="https://orga-app-client-stag.azurewebsites.net/" target="_blank">
-                            https://orga-app-client-stag.azurewebsites.net/
+                        <a href="https://client-stag.orga-app.de/" target="_blank">
+                            https://client-stag.orga-app.de/
                         </a>
                     </p>
 
                     <h5 style="margin-top: 20px;">API URL</h5>
                     <p>
-                        <a href="https://orga-app-api-stag.azurewebsites.net" target="_blank">
-                            https://orga-app-api-stag.azurewebsites.net
+                        <a href="https://api-stag.orga-app.de/" target="_blank">
+                            https://api-stag.orga-app.de/
                         </a>
                     </p>
 
@@ -197,15 +197,15 @@
 
                     <h5 style="margin-top: 20px;">Desktop Client</h5>
                     <p>
-                        <a href="https://orga-app-client-prod.azurewebsites.net/" target="_blank">
-                            https://orga-app-client-prod.azurewebsites.net/
+                        <a href="https://client.orga-app.de/" target="_blank">
+                            https://client.orga-app.de/
                         </a>
                     </p>
 
                     <h5 style="margin-top: 20px;">API URL</h5>
                     <p>
-                        <a href="https://orga-app-api-prod.azurewebsites.net" target="_blank">
-                            https://orga-app-api-prod.azurewebsites.net
+                        <a href="https://api.orga-app.de/" target="_blank">
+                            https://api.orga-app.de/
                         </a>
                     </p>
 
