--- a/apps.html
+++ b/apps.html
@@ -135,7 +135,7 @@
                     </a>
 
                     <h2>Desktop Client</h2>
-                    <a href="https://orga-app-client-prod.azurewebsites.net/" target="_blank">
+                    <a href="https://client.orga-app.de/" target="_blank">
                         <img src="/img/apps/desktop-badge@2x.png" class="app-img-small" alt="Desktop Client">
                     </a>
                 </div>  <!--blog-item section end-->
