--- a/dev.html
+++ b/dev.html
@@ -15,7 +15,7 @@
     <meta name="smartbanner:price-suffix-google" content=" Google Play">
     <meta name="smartbanner:icon-google" content="img/orga-app/ORGA_App_dunkel.svg">
     <meta name="smartbanner:button" content="ANZEIGEN">
-    <meta name="smartbanner:button-url-google" content="https://play.google.com/store/apps/details?id=com.orgarena.orgaapp.prod">
+    <meta name="smartbanner:button-url-google" content="market://details?id=com.orgarena.orgaapp.prod">
     <meta name="smartbanner:enabled-platforms" content="android">
     <meta name="smartbanner:close-label" content="Close">
     <meta name="smartbanner:disable-positioning" content="true">
@@ -206,7 +206,7 @@
                     <a href="https://apps.apple.com/de/app/orga-app/id1491304373" target="_blank">
                         <img src="/img/apps/apple-store-badge@2x.png" class="app-img-small" alt="Apple App Store" style="margin-right: 20px;">
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=com.orgarena.orgaapp.prod" target="_blank">
+                    <a href="market://details?id=com.orgarena.orgaapp.prod" target="_blank">
                         <img src="/img/apps/google-play-badge@2x.png" class="app-img-small" alt="Google Play">
                     </a>
 
@@ -322,7 +322,7 @@
                 <a href="https://apps.apple.com/de/app/orga-app/id1491304373" target="_blank">
                     <img src="/img/apps/apple-store-badge@2x.png" class="app-img-small app-img-footer-left" alt="Apple App Store">
                 </a>
-                <a href="https://play.google.com/store/apps/details?id=com.orgarena.orgaapp.prod" target="_blank">
+                <a href="market://details?id=com.orgarena.orgaapp.prod" target="_blank">
                     <img src="/img/apps/google-play-badge@2x.png" class="app-img-small app-img-footer-right" alt="Google Play">
                 </a>
             </div>
