--- a/apps.html
+++ b/apps.html
@@ -130,7 +130,8 @@
                     <a href="https://apps.apple.com/de/app/orga-app/id1491304373" target="_blank">
                         <img src="/img/apps/apple-store-badge@2x.png" class="app-img-small" alt="Apple App Store" style="margin-right: 20px;">
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=com.orgarena.orgaapp.prod" target="_blank">
+<!--                    <a href="https://play.google.com/store/apps/details?id=com.orgarena.orgaapp.prod" target="_blank">-->
+                    <a href="#" onclick="openPlayStore('com.orgarena.orgaapp.prod')" target="_blank">
                         <img src="/img/apps/google-play-badge@2x.png" class="app-img-small" alt="Google Play">
                     </a>
 
@@ -186,7 +187,8 @@
                 <a href="https://apps.apple.com/de/app/orga-app/id1491304373" target="_blank">
                     <img src="/img/apps/apple-store-badge@2x.png" class="app-img-small app-img-footer-left" alt="Apple App Store">
                 </a>
-                <a href="https://play.google.com/store/apps/details?id=com.orgarena.orgaapp.prod" target="_blank">
+<!--                <a href="https://play.google.com/store/apps/details?id=com.orgarena.orgaapp.prod" target="_blank">-->
+                <a href="" onclick="openPlayStore('com.orgarena.orgaapp.prod')" target="_blank">
                     <img src="/img/apps/google-play-badge@2x.png" class="app-img-small app-img-footer-right" alt="Google Play">
                 </a>
             </div>
@@ -232,6 +234,7 @@
 <script src="js/custom.js" type="text/javascript"></script>
 <script src="js/pace.min.js" type="text/javascript"></script>
 <script src="js/isotope-custom.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/open-play-store.js"></script>
 
 
 <!--<script>-->
