--- a/dev.html
+++ b/dev.html
@@ -206,7 +206,8 @@
                     <a href="https://apps.apple.com/de/app/orga-app/id1491304373" target="_blank">
                         <img src="/img/apps/apple-store-badge@2x.png" class="app-img-small" alt="Apple App Store" style="margin-right: 20px;">
                     </a>
-                    <a href="market://details?id=com.orgarena.orgaapp.prod" target="_blank">
+<!--                    <a href="market://details?id=com.orgarena.orgaapp.prod" target="_blank">-->
+                    <a href="#" target="_blank" onclick="openPlayStore('com.orgarena.orgaapp.prod')">
                         <img src="/img/apps/google-play-badge@2x.png" class="app-img-small" alt="Google Play">
                     </a>
 
@@ -368,6 +369,7 @@
 <script src="js/custom.js" type="text/javascript"></script>
 <script src="js/pace.min.js" type="text/javascript"></script>
 <script src="js/isotope-custom.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/open-play-store.js"></script>
 
 
 <!--<script>-->
