Link zum Playstore angepasst

--- a/agbs.html
+++ b/agbs.html
@@ -15,7 +15,7 @@
 	<meta name="smartbanner:price-suffix-google" content=" Google Play">
 	<meta name="smartbanner:icon-google" content="img/orga-app/ORGA_App_dunkel.svg">
 	<meta name="smartbanner:button" content="ANZEIGEN">
-	<meta name="smartbanner:button-url-google" content="https://play.google.com/store/apps/details?id=com.orgarena.orgaapp.prod">
+	<meta name="smartbanner:button-url-google" content="market://details?id=com.orgarena.orgaapp.prod">
 	<meta name="smartbanner:enabled-platforms" content="android">
 	<meta name="smartbanner:close-label" content="Close">
 	<meta name="smartbanner:disable-positioning" content="true">
