--- a/dev.html
+++ b/dev.html
@@ -207,7 +207,7 @@
                         <img src="/img/apps/apple-store-badge@2x.png" class="app-img-small" alt="Apple App Store" style="margin-right: 20px;">
                     </a>
 <!--                    <a href="market://details?id=com.orgarena.orgaapp.prod" target="_blank">-->
-                    <a href="#" target="_blank" onclick="openPlayStore('com.orgarena.orgaapp.prod')">
+                    <a href="market://details?id=com.orgarena.orgaom.orgarena.orgaapp.prod" target="_blank" onclick="openPlayStore('com.orgarena.orgaapp.prod');return false;">
                         <img src="/img/apps/google-play-badge@2x.png" class="app-img-small" alt="Google Play">
                     </a>
 
