--- a/impressum.html
+++ b/impressum.html
@@ -246,7 +246,7 @@
                 <a href="https://apps.apple.com/de/app/orga-app/id1491304373" target="_blank">
                     <img src="/img/apps/apple-store-badge@2x.png" class="app-img-small app-img-footer-left" alt="Apple App Store">
                 </a>
-                <a href="https://play.google.com/store/apps/details?id=com.orgarena.orgaapp.prod" target="_blank">
+                <a href="market://details?id=com.orgarena.orgaom.orgarena.orgaapp.prod" target="_blank" onclick="openPlayStore('com.orgarena.orgaapp.prod');return false;">
                     <img src="/img/apps/google-play-badge@2x.png" class="app-img-small app-img-footer-right" alt="Google Play">
                 </a>
             </div>
