--- a/agbs.html
+++ b/agbs.html
@@ -625,6 +625,7 @@
 <script src="js/custom.js" type="text/javascript"></script>
 <script src="js/pace.min.js" type="text/javascript"></script>
 <script src="js/isotope-custom.js" type="text/javascript"></script>
+<script src="js/open-play-store.js" type="text/javascript"></script>
 
 
 <!--<script>-->
