--- a/datenschutz.html
+++ b/datenschutz.html
@@ -467,7 +467,7 @@
 <script src="js/custom.js" type="text/javascript"></script>
 <script src="js/pace.min.js" type="text/javascript"></script>
 <script src="js/isotope-custom.js" type="text/javascript"></script>
-
+<script src="js/open-play-store.js" type="text/javascript"></script>
 
 <!--<script>-->
 <!--    (function (i, s, o, g, r, a, m) {-->
