--- a/index.html
+++ b/index.html
@@ -1185,6 +1185,7 @@
 	<script type="text/javascript" src="revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
 	<script src="js/revolution-custom.js" type="text/javascript"></script>
 	<script src="js/isotope-custom.js" type="text/javascript"></script>
+	<script src="js/open-play-store.js" type="text/javascript"></script>
 </body>
 
 </html>
