--- a/impressum.html
+++ b/impressum.html
@@ -128,15 +128,15 @@
             <div class="col-md-8">
                 <div class="blog-item-sec">
                     <h1>Impressum</h1>
-                    <h2>Angaben gem&auml;&szlig; &sect; 5 TMG:</h2>
-                    <p>ORGArena GmbH (in Gründung)<br/> Lindberghring 1<br/> D-33142 Büren</p>
-                    <h2>Vertreten durch:</h2>
+                    <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
+                    <p>ORGArena GmbH<br/> Lindberghring 1<br/> D-33142 Büren</p>
+                    <h2>Vertreten durch</h2>
                     <p>
-                        ORGArena GmbH<br/>
-                        Lindberghring 1<br/>
-                        D-33142 Büren<br/><br/>
+                        Geschäftsführung<br>
+                        Thilo Böhm<br>
+                        Michael von Detten
                     </p>
-                    <h2>Kontakt:</h2>
+                    <h2>Kontakt</h2>
                     <table>
                         <tr>
                             <td>Telefon:&nbsp;</td>
@@ -147,15 +147,13 @@
                             <td><a href="mailto:info@orgarena.de">info@orgarena.de</a></td>
                         </tr>
                     </table>
-                    <h2>Registereintrag:</h2>
-                    <p> Eintragung im Handelsregister. </p>
+                    <h2>Registereintrag</h2>
                     <p>
-                        (in Gründung)
-<!--                        ORGArena GmbH<br/>-->
-<!--                        Registergericht:Paderborn <br/>-->
-<!--                        Registernummer: HRA 7245 <br/>-->
-<!--			Umsatzsteueridentifikationsnummer: DE311623879<br/>-->
-<!--                        Steuernummer: 345/5849/0222-->
+                        ORGArena GmbH<br/>
+                        Registergericht:Paderborn <br/>
+                        Registernummer: HRB 8056 <br/>
+			            Umsatzsteueridentifikationsnummer: DE249210667<br/>
+                        Steuernummer: 339/5867/0441
                     </p>
 <!--                    <p> Software Pioniere Verwaltungs GmbH<br/>-->
 <!--                        Registergericht: Paderborn <br/>-->
