--- a/impressum.html
+++ b/impressum.html
@@ -132,8 +132,8 @@
                     <p>ORGArena GmbH<br/> Lindberghring 1<br/> D-33142 Büren</p>
                     <h2>Vertreten durch</h2>
                     <p>
-                        Geschäftsführung<br>
-                        Thilo Böhm<br>
+                        Gesch&auml;ftsf&uuml;hrung<br>
+                        Thilo B&ouml;hm<br>
                         Michael von Detten
                     </p>
                     <h2>Kontakt</h2>
@@ -149,10 +149,10 @@
                     </table>
                     <h2>Registereintrag</h2>
                     <p>
-                        ORGArena GmbH<br/>
-                        Registergericht:Paderborn <br/>
-                        Registernummer: HRB 8056 <br/>
-			            Umsatzsteueridentifikationsnummer: DE249210667<br/>
+                        ORGArena GmbH<br>
+                        Registergericht:Paderborn <br>
+                        Registernummer: HRB 8056 <br>
+			            Umsatzsteueridentifikationsnummer: DE249210667<br>
                         Steuernummer: 339/5867/0441
                     </p>
                     <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer
