--- a/dev.html
+++ b/dev.html
@@ -210,6 +210,14 @@
                     <a href="market://details?id=com.orgarena.orgaom.orgarena.orgaapp.prod" target="_blank" onclick="openPlayStore('com.orgarena.orgaapp.prod');return false;">
                         <img src="/img/apps/google-play-badge@2x.png" class="app-img-small" alt="Google Play">
                     </a>
+                    
+                     <p>
+                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App DEV">
+                        <strong>Android</strong><br>
+                        <a href="https://storgaappprod002.blob.core.windows.net/downloads/default-prod/orga-app.apk" target="_blank">
+                            https://storgaappprod002.blob.core.windows.net/downloads/default-prod/orga-app.apk
+                        </a>
+                    </p>
 
                     <h5 style="margin-top: 20px;">Desktop Client</h5>
                     <p>
