--- a/dev.html
+++ b/dev.html
@@ -115,7 +115,7 @@
 
                     <h5>Mobile Apps</h5>
                     <p>
-                        <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App DEV">
+                        <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App">
                         <strong>iOS</strong><br>
                         <a href="https://storgaappdev002.blob.core.windows.net/downloads/default-dev/orga-app.install.html" target="_blank">
                             https://storgaappdev002.blob.core.windows.net/downloads/default-dev/orga-app.install.html
@@ -123,7 +123,7 @@
                     </p>
 
                     <p>
-                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App DEV">
+                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App">
                         <strong>Android</strong><br>
                         <a href="https://storgaappdev002.blob.core.windows.net/downloads/default-dev/orga-app.apk" target="_blank">
                             https://storgaappdev002.blob.core.windows.net/downloads/default-dev/orga-app.apk
@@ -160,7 +160,7 @@
 
                     <h5 style="margin-top: 20px;">Mobile Apps</h5>
                     <p>
-                        <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App STAGING">
+                        <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App">
                         <strong>iOS</strong><br>
                         <a href="https://storgaappstag002.blob.core.windows.net/downloads/default-staging/orga-app.install.html" target="_blank">
                             https://storgaappstag002.blob.core.windows.net/downloads/default-staging/orga-app.install.html
@@ -168,7 +168,7 @@
                     </p>
 
                     <p>
-                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App STAGING">
+                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App">
                         <strong>Android</strong><br>
                         <a href="https://storgaappstag002.blob.core.windows.net/downloads/default-staging/orga-app.apk" target="_blank">
                             https://storgaappstag002.blob.core.windows.net/downloads/default-staging/orga-app.apk
@@ -212,7 +212,7 @@
                     </a>
                     
                      <p>
-                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App DEV">
+                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App">
                         <strong>Android</strong><br>
                         <a href="https://storgaappprod002.blob.core.windows.net/downloads/default-prod/orga-app.apk" target="_blank">
                             https://storgaappprod002.blob.core.windows.net/downloads/default-prod/orga-app.apk
@@ -248,7 +248,7 @@
 
                     <h5>SoPi</h5>
                     <p>
-                        <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App DEV">
+                        <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App">
                         <strong>iOS</strong><br>
                         <a href="https://storgaappprod002.blob.core.windows.net/downloads/sopi-prod/orga-app.install.html" target="_blank">
                             https://storgaappprod002.blob.core.windows.net/downloads/sopi-prod/orga-app.install.html
@@ -256,7 +256,7 @@
                     </p>
 
                     <p>
-                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App DEV">
+                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App">
                         <strong>Android</strong><br>
                         <a href="https://storgaappprod002.blob.core.windows.net/downloads/sopi-prod/orga-app.apk" target="_blank">
                             https://storgaappprod002.blob.core.windows.net/downloads/sopi-prod/orga-app.apk
@@ -267,7 +267,7 @@
 
                     <h5>TSG</h5>
                     <p>
-                        <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App DEV">
+                        <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App">
                         <strong>iOS</strong><br>
                         <a href="https://storgaappprod002.blob.core.windows.net/downloads/tsg-prod/orga-app.install.html" target="_blank">
                             https://storgaappprod002.blob.core.windows.net/downloads/tsg-prod/orga-app.install.html
@@ -275,12 +275,32 @@
                     </p>
 
                     <p>
-                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App DEV">
+                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App">
                         <strong>Android</strong><br>
                         <a href="https://storgaappprod002.blob.core.windows.net/downloads/tsg-prod/orga-app.apk" target="_blank">
                             https://storgaappprod002.blob.core.windows.net/downloads/tsg-prod/orga-app.apk
                         </a>
                     </p>
+                    
+                       <p>&nbsp;</p>
+
+                    <h5>FCB</h5>
+                    <p>
+                        <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App">
+                        <strong>iOS</strong><br>
+                        <a href="https://storgaappprod002.blob.core.windows.net/downloads/fcb-prod/orga-app.install.html" target="_blank">
+                            https://storgaappprod002.blob.core.windows.net/downloads/fcb-prod/orga-app.install.html
+                        </a>
+                    </p>
+
+                    <p>
+                        <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App">
+                        <strong>Android</strong><br>
+                        <a href="https://storgaappprod002.blob.core.windows.net/downloads/fcb-prod/orga-app.apk" target="_blank">
+                            https://storgaappprod002.blob.core.windows.net/downloads/fcb-prod/orga-app.apk
+                        </a>
+                    </p>
+
 
                 </div> <!--blog-item section end-->
 
