--- a/dev.html
+++ b/dev.html
@@ -214,8 +214,8 @@
                      <p>
                         <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App">
                         <strong>Android</strong><br>
-                        <a href="https://storgaappprod002.blob.core.windows.net/downloads/default-prod/orga-app.apk" target="_blank">
-                            https://storgaappprod002.blob.core.windows.net/downloads/default-prod/orga-app.apk
+                        <a href="https://storgaappprod002.blob.core.windows.net/downloads/default-prod/orga-app.aab" target="_blank">
+                            https://storgaappprod002.blob.core.windows.net/downloads/default-prod/orga-app.aab
                         </a>
                     </p>
 
