--- a/dev.html
+++ b/dev.html
@@ -293,9 +293,8 @@
               </a>
             </p>
 
-            <p>
-              <img src="img/desktop-badge@2x.png" style=" width: 15px; margin-bottom: 4px;" alt="Desktop Client">
-              <strong>Android</strong><br>
+            <p>              
+              <strong>Desktop</strong><br>
               <a href="https://orga-app.sopidemo.de/" target="_blank">
                 https://orga-app.sopidemo.de/
               </a>
@@ -342,8 +341,7 @@
             </p>
 
             <p>
-              <img src="img/desktop-badge@2x.png" style=" width: 15px; margin-bottom: 4px;" alt="Desktop Client">
-              <strong>Android</strong><br>
+              <strong>Desktop</strong><br>
               <a href="https://orga-app.fcbayern.com" target="_blank">
                 https://orga-app.fcbayern.com
               </a>
