--- a/dev.html
+++ b/dev.html
@@ -302,6 +302,26 @@
 
             <p>&nbsp;</p>
 
+            <h5>B04</h5>
+            <p>
+              <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App">
+              <strong>iOS</strong><br>
+              <a href="https://storgaappprod002.blob.core.windows.net/downloads/b04-prod/orga-app.install.html"
+                target="_blank">
+                https://storgaappprod002.blob.core.windows.net/downloads/b04-prod/orga-app.install.html
+              </a>
+            </p>
+
+            <p>
+              <img src="img/apps/icon-android.png" style=" width: 15px; margin-bottom: 4px;" alt="Android App">
+              <strong>Android</strong><br>
+              <a href="https://storgaappprod002.blob.core.windows.net/downloads/b04-prod/orga-app.apk" target="_blank">
+                https://storgaappprod002.blob.core.windows.net/downloads/b04-prod/orga-app.apk
+              </a>
+            </p>
+
+            <p>&nbsp;</p>
+
             <h5>TSG</h5>
             <p>
               <img src="img/apps/icon-apple.png" style=" width: 15px; margin-bottom: 7px;" alt="iOS App">
